macviews: change menu widths from fixed to minimums

Fixed menu widths turned out not to work well in locales with longer
strings. This change changes the menu widths to be minimums instead.
See screenshots attached to the bug for examples.

Bug: 832239
Change-Id: I4cae9efb53b86b08c4cd8b56d4eb089446e872d9
Reviewed-on: https://chromium-review.googlesource.com/1026052
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553584}
Former-commit-id: ce874203d5aea46192d31408e064d88b42e75bb0