ui/views/controls/menu/menu_config_mac.mm
@@ -17,9 +17,9 @@ void InitMaterialMenuConfig(views::MenuConfig* config) {
   config->menu_vertical_border_size = 8;
   config->menu_horizontal_border_size = 0;
   config->submenu_horizontal_inset = 0;
-  config->fixed_text_item_height = 32;
-  config->fixed_container_item_height = 48;
-  config->fixed_menu_width = 320;
+  config->minimum_text_item_height = 32;
+  config->minimum_container_item_height = 48;
+  config->minimum_menu_width = 320;
   config->item_left_margin = 8;
   config->label_to_arrow_padding = 0;
   config->arrow_to_edge_padding = 16;
